*Forgot to upload RAR changes to branches

--- a/libunrar/Makefile
+++ b/libunrar/Makefile
@@ -110,7 +110,7 @@ PREFIX	:= $(DEVKITPPC)/bin/powerpc-eabi-
 CC		:=	$(PREFIX)g++
 AR		:=	$(PREFIX)ar
 CXX=$(CC)
-CXXFLAGS=-O3 -DBIG_ENDIAN -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -LANG:std
+CXXFLAGS=-O3 -DBIG_ENDIAN -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -LANG:std -DSILENT
 LDFLAGS=
 DESTDIR=/
 
