*Added ZIP feature. You can now add/copy files/folders to a ZIP or create new ZIPs. *Added compression setting to the general settings (-1 to 9) with description. This is used for all ZIPPING processes.
Two ways of adding files/folders to a zip:
1. Mark all files/folders that you want to add to a zip and use the RightClickMenu entry "Add to zip". You can than enter a path to a zip file. If the zip exists the files will be appended. If not than a new ZIP is created.

2. Copy/Cut all the files/folders you want to add. Go into an existing zip and to the path you want to add the files to and use the RightClickMenu entry "Paste". These files will be appended to the zip file into the path you are currently in.

--- a/libzip/Makefile
+++ b/libzip/Makefile
@@ -9,11 +9,11 @@ LIBOGC_LIB      :=      $(DEVKITPRO)/libogc/lib/wii
 
 CFLAGS  := -O2 $(MACHDEP) -I$(LIBOGC_INC) -DHAVE_LIBZ
 
-LIB     := unzip
+LIB     := zip
 CFILES  := $(wildcard *.c)
 OFILES  := $(CFILES:.c=.o)
 ARC     := lib$(LIB).a
-HDR     := unzip.h ioapi.h
+HDR     := unzip.h ioapi.h zip.h
 
 all : $(OFILES)
 		$(AR) -r $(ARC) $(OFILES)
@@ -22,9 +22,9 @@ clean :
 		rm -f $(OFILES) $(ARC)
 
 install :
-		mkdir -p  $(LIBOGC_LIB)  $(LIBOGC_INC)/unzip
+		mkdir -p  $(LIBOGC_LIB)  $(LIBOGC_INC)/zip
 		cp -f $(ARC) $(LIBOGC_LIB)/
-		cp -f $(HDR) $(LIBOGC_INC)/unzip/
+		cp -f $(HDR) $(LIBOGC_INC)/zip/
 
 %.o : %.c
 		$(CC) $(CFLAGS) -c $< -o $@
